--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@reduxjs/toolkit": "^1.8.3",
     "@types/react-native-base64": "^0.2.0",
     "@types/react-native-sqlite-storage": "^5.0.2",
+    "@types/react-native-svg-charts": "^5.0.12",
     "axios": "^0.27.2",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "moment": "^2.29.4",
+    "patch-package": "^6.4.7",
     "react": "18.0.0",
     "react-native": "0.69.3",
     "react-native-base64": "^0.2.1",
@@ -28,6 +31,8 @@
     "react-native-reanimated": "2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-svg": "^13.0.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
@@ -50,7 +55,7 @@
     "jest": "^26.6.3",
     "jetifier": "2.0.0",
     "metro-react-native-babel-preset": "^0.70.3",
-    "react-native-sqlite-storage": "6.0.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-test-renderer": "18.0.0",
     "typescript": "^4.4.4"
   },
