--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@data-ui/xy-chart": "^0.0.84",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.11",
@@ -20,6 +21,9 @@
     "@types/react-native-svg-charts": "^5.0.12",
     "axios": "^0.27.2",
     "deprecated-react-native-prop-types": "^2.3.0",
+    "dsp.js": "^1.0.1",
+    "fft-js": "^0.0.12",
+    "fft.js": "^4.0.4",
     "moment": "^2.29.4",
     "patch-package": "^6.4.7",
     "react": "18.0.0",
