--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,8 @@ buck-out/
 # Ruby / CocoaPods
 /ios/Pods/
 /vendor/bundle/
+
+#terraform
+/terraform/.terraform.lock.hcl
+/terraform/.terraform
+/terraform/env
